@@ -3,6 +3,7 @@ January 23, 2025:
 * Added a new mobile UI that's very similar to the desktop UI, instead of maintaining two separate interfaces for desktop and mobile. 
 * Replaced the very complex Canvas graphics code with plain HTML elements and browser-native drag and drop functionality. This change is less immediately noticeable but should vastly improve performance, reduce bugs, and make it a lot easier for me to add features such as new layouts in the future.
 * Updated the method for removing items from the chart. Instead of dragging an item out of bounds, there is now an X button on each item. This button appears on hover when using a mouse, and is always visible when on a touchscreen.
+* Tabs will now remember their content when you switch between them. Previously, for example, typing in a search, switching to Options, and switching back to Search would empty the search box and results list. That behavior is now fixed.
 
 October 29, 2024: Redesigned the Options menu to be nicer looking, especially on Safari. Also, rewrote the Options menu code to be cleaner and less bug prone.
 
